prev next fixed on mobile!

--- a/scss/_testimonial.scss
+++ b/scss/_testimonial.scss
@@ -4,6 +4,7 @@
     display: flex;
     .arrow {
       width: 24vw;
+      height: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -32,6 +33,7 @@
         display: flex;
         justify-content: space-between;
       .arrow {
+        height: auto;
         display: flex;
         align-items: center;
         justify-content: center;
