--- a/scss/main.css
+++ b/scss/main.css
@@ -662,6 +662,7 @@ table {
   }
   .testimonial .arrow {
     width: 24vw;
+    height: 100vw;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -701,6 +702,7 @@ table {
             justify-content: space-between;
   }
   .testimonial .arrow {
+    height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
